--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "untitled-case-study-css-animations-with-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
